via CVS the version of the first entry is the forthcoming version number.

0.41 - work in progress
-----------------------
- Add generic parameter parser for channel output streams
- Add "exec" command to config to allow arbitrary command execution on startup
- Remove defaults for each module type and instead use "exec" feature to add
  output streams to default channel

0.40 - Nov 1st 2003
-------------------
- HISTORY now takes parameters for number of entries to display, and where
  to start from.  Mserv now remembers last 100 played tracks (compile option)
- QUEUE now is fairer when there are more than 2 users trying to queue songs,
  interspersing the tracks correctly
- Fix tagline to HELP to give thanks
- Fix queuing of last track, bug introduced in 0.39
- Separate out channel functions from output functions
- Modularise the icecast output routines (uses libtool/libltdl)
- Do our own time keeping (for re-introducing soundcard support)
- Allow multiple output streams on each channel (for doing icecast+soundcard)
- Introduce concept of primary volume controllers
- Add snprintf checks in autoconf
- Fix mservcli library discard loop (thanks to Thomas Munro)
- Rename soundcard.h to mservsoundcard.h (requested by David Brownlee)
- New license
- Fix overflow bug in options parsing (thanks to Sam Couter)

0.39 - Sep 13th 2003
--------------------
- Default configuration is now written to config.dist on load (if it can)
- Album and author lists are now dynamically allocated in the same way as
  genre lists, so no more compiled limit on tracks per album
- Fix off-by-one error in -r command line option
- Report an error on start-up if an old configuration file is used
- Most debugging is now on -d command line option rather than compile-time
- Better debugging messages in Icecast output engine
- Log people connecting to Mserv
- Fix ogg player line in configuration file

0.38a - Aug 31st 2003
---------------------
- Fixed compilation problem