@@ -27,7 +27,7 @@
 
 #include "mserv.h"
 
-static char mserv_rcs_id[] = "$Id: icecast.c,v 1.1 2003/11/01 03:36:30 squish Exp $";
+static char mserv_rcs_id[] = "$Id: icecast.c,v 1.2 2003/11/11 00:11:43 squish Exp $";
 MSERV_MODULE(icecast, "0.01", "Icecast output streaming",
              MSERV_MODFLAG_OUTPUT);
 
@@ -36,6 +36,8 @@ typedef struct _t_icecast {
   int samplerate;          /* samples per second (16 bit) */
   int bitrate;             /* bitrate */
   int volume;              /* volume level */
+  int persist;             /* persist streaming when stopped */
+  int connected;           /* connected? */
   shout_t *shout;          /* shout output object */
   vorbis_info vi;          /* vorbis object */
   vorbis_comment vc;       /* vorbis comment object */
@@ -67,23 +69,102 @@ int icecast_final(char *error, int errsize)
   return MSERV_SUCCESS;
 }
 
+/* connect to stream */
+
+static int icecast_internal_connect(t_channel *c, t_icecast *icecast,
+                                    char *error, int errsize)
+{
+  ogg_packet header;
+  ogg_packet header_comm;
+  ogg_packet header_code;
+
+  if (icecast->connected)
+    return MSERV_SUCCESS;
+
+  if (shout_open(icecast->shout) != SHOUTERR_SUCCESS) {
+    snprintf(error, errsize, "icecast: failed opening Icecast connection: %s",
+             shout_get_error(icecast->shout));
+    goto failed;
+  }
+  mserv_log("Successfully connected to Icecast server '%s:%s'"
+            " for mount '%s'",
+            shout_get_host(icecast->shout), shout_get_port(icecast->shout),
+            shout_get_mount(icecast->shout));
+  icecast->connected = 1;
+  vorbis_info_init(&icecast->vi);
+  if (vorbis_encode_init(&icecast->vi, icecast->channels, 
+                         icecast->samplerate, -1,
+                         icecast->bitrate, -1) != 0) {
+    snprintf(error, errsize, "icecast: failed to initialise vorbis engine");
+    goto failed;
+  }
+  vorbis_comment_init(&icecast->vc);
+  vorbis_comment_add_tag(&icecast->vc, "ENCODER", "mserv " VERSION);
+  vorbis_analysis_init(&icecast->vd, &icecast->vi);
+  vorbis_block_init(&icecast->vd, &icecast->vb);
+  ogg_stream_init(&icecast->os, rand());
+  vorbis_analysis_headerout(&icecast->vd, &icecast->vc,
+                            &header, &header_comm, &header_code);
+  ogg_stream_packetin(&icecast->os, &header);
+  ogg_stream_packetin(&icecast->os, &header_comm);
+  ogg_stream_packetin(&icecast->os, &header_code);
+  for (;;) {
+    if (ogg_stream_flush(&icecast->os, &icecast->og) == 0)
+      break;
+    if (shout_send(icecast->shout, icecast->og.header,
+                   icecast->og.header_len) != SHOUTERR_SUCCESS ||
+        shout_send(icecast->shout, icecast->og.body,
+                   icecast->og.body_len) != SHOUTERR_SUCCESS) {
+      snprintf(error, errsize, "icecast: failed to send starter to "
+               "shout: %s", shout_get_error(icecast->shout));
+      vorbis_block_clear(&icecast->vb);
+      vorbis_dsp_clear(&icecast->vd);
+      vorbis_info_clear(&icecast->vi);
+      goto failed;
+    }
+  }
+  return MSERV_SUCCESS;
+failed:
+  if (icecast->connected)
+    shout_close(icecast->shout);
+  icecast->connected = 0;
+  return MSERV_FAILURE;
+}
+
+/* disconnect to stream */
+
+static int icecast_internal_disconnect(t_channel *c, t_icecast *icecast,
+                                       char *error, int errsize)
+{
+  if (!icecast->connected)
+    return MSERV_SUCCESS;
+
+  vorbis_analysis_wrote(&icecast->vd, 0);
+  vorbis_block_clear(&icecast->vb);
+  vorbis_dsp_clear(&icecast->vd);
+  vorbis_info_clear(&icecast->vi);
+  shout_close(icecast->shout);
+  icecast->connected = 0;
+}
+
 /* create output stream */
 
-int icecast_output_create(t_channel *c, const char *uri,
-                           const char *params, void **private,
+int icecast_output_create(t_channel *c, const char *location,
+                           t_params *params, void **private,
                            char *error, int errsize)
 {
   char *user, *pass, *host, *port;
   char mount[128];
   char splitbuf[128];
   char *p;
+  char *val;
   t_icecast *icecast;
 
   if ((icecast = malloc(sizeof(t_icecast))) == NULL) {
     snprintf(error, errsize, "out of memory");
     return MSERV_FAILURE;
   }
-  icecast->volume = 50;
+  icecast->connected = 0;
   icecast->channels = c->channels;
   icecast->samplerate = c->samplerate;
   if (icecast->channels != 2) {
@@ -94,17 +175,25 @@ int icecast_output_create(t_channel *c, const char *uri,
     snprintf(error, errsize, "sample rate must be 44100");
     return MSERV_FAILURE;
   }
-  icecast->bitrate = atoi(params);
+  if (params_get(params, "bitrate", &val) != MSERV_SUCCESS)
+    val = "32768";
+  icecast->bitrate = atoi(val);
+  if (params_get(params, "volume", &val) != MSERV_SUCCESS)
+    val = "50";
+  icecast->volume = atoi(val);
+  if (params_get(params, "persist", &val) != MSERV_SUCCESS)
+    val = "1";
+  icecast->persist = atoi(val) ? 1 : 0;
   if (!(icecast->shout = shout_new())) {
     snprintf(error, errsize, "failed to allocate shout object");
-    goto failed;
+    return MSERV_FAILURE;
   }
   /* now take a copy of destination into splitbuf for splitting */
-  if (strlen(uri) >= sizeof(splitbuf)) {
+  if (strlen(location) >= sizeof(splitbuf)) {
     snprintf(error, errsize, "URI too long");
     goto failed;
   }
-  strncpy(splitbuf, uri, sizeof(splitbuf));
+  strncpy(splitbuf, location, sizeof(splitbuf));
   splitbuf[sizeof(splitbuf) - 1] = '\0';
   if (strncmp(splitbuf, "http://", strlen("http://")) != 0) {
     snprintf(error, errsize, "only http:// Icecast URIs are supported");
@@ -163,58 +252,16 @@ int icecast_output_create(t_channel *c, const char *uri,
              shout_get_error(icecast->shout));
     goto failed;
   }
-  if (shout_open(icecast->shout) != SHOUTERR_SUCCESS) {
-    snprintf(error, errsize, "icecast: failed opening Icecast connection: %s",
-             shout_get_error(icecast->shout));
-    goto failed;
-  }
-  mserv_log("Successfully connected to Icecast host '%s@%s' for mount '%s'",
-            host, port, mount);
-
-  vorbis_info_init(&icecast->vi);
-  if (vorbis_encode_init(&icecast->vi, icecast->channels, icecast->samplerate,
-                         -1, icecast->bitrate, -1) != 0) {
-    snprintf(error, errsize, "icecast: failed to initialise vorbis engine");
-    goto failed;
-  }
-  vorbis_comment_init(&icecast->vc);
-  vorbis_comment_add_tag(&icecast->vc, "ENCODER", "Mserv " VERSION);
-  vorbis_analysis_init(&icecast->vd, &icecast->vi);
-  vorbis_block_init(&icecast->vd, &icecast->vb);
-  ogg_stream_init(&icecast->os, rand());
-  {
-    ogg_packet header;
-    ogg_packet header_comm;
-    ogg_packet header_code;
-
-    vorbis_analysis_headerout(&icecast->vd, &icecast->vc,
-                              &header, &header_comm, &header_code);
-    ogg_stream_packetin(&icecast->os, &header);
-    ogg_stream_packetin(&icecast->os, &header_comm);
-    ogg_stream_packetin(&icecast->os,&header_code);
-    for (;;) {
-      int result = ogg_stream_flush(&icecast->os, &icecast->og);
-      if (result == 0)
-        break;
-      if (shout_send(icecast->shout, icecast->og.header,
-                     icecast->og.header_len) != SHOUTERR_SUCCESS) {
-        snprintf(error, errsize, "icecast: failed to send ogg header to "
-                 "shout: %s", shout_get_error(icecast->shout));
-        goto failed;
-      }
-      if (shout_send(icecast->shout, icecast->og.body,
-                     icecast->og.body_len) != SHOUTERR_SUCCESS) {
-        snprintf(error, errsize, "icecast: failed to send ogg body to "
-                 "shout: %s", shout_get_error(icecast->shout));
-        goto failed;
-      }
-    }
+  /* does the user want us to connect now? */
+  if (params_get(params, "connect", &val) == MSERV_SUCCESS && atoi(val) == 1) {
+    if (icecast_internal_connect(c, icecast, error, errsize) != MSERV_SUCCESS)
+      goto failed;
   }
   *private = (void *)icecast;
   return MSERV_SUCCESS;
 failed:
   if (icecast->shout)
-    shout_close(icecast->shout);
+    shout_free(icecast->shout);
   free(icecast);
   return MSERV_FAILURE;
 }
@@ -229,9 +276,12 @@ int icecast_output_destroy(t_channel *c, void *private,
   (void)c;
   (void)error;
   (void)errsize;
-  /* XXX output_stop(o); - remember to this in parent! */
-  vorbis_analysis_wrote(&icecast->vd, 0);
-  shout_close(icecast->shout);
+
+  if (icecast->connected) {
+    if (icecast_internal_disconnect(c, icecast, error,
+                                    errsize) != MSERV_SUCCESS)
+      return MSERV_FAILURE;
+  }
   return MSERV_SUCCESS;
 }
 
@@ -310,5 +360,27 @@ int icecast_output_volume(t_channel *c, void *private, int *volume,
     return MSERV_SUCCESS;
   }
   icecast->volume = *volume;
+  return MSERV_SUCCESS;
+}
+
+/* start output stream */
+
+int icecast_output_start(t_channel *c, void *private, char *error, int errsize)
+{
+  t_icecast *icecast = (t_icecast *)private;
+
+  if (!icecast->connected)
+    return icecast_internal_connect(c, icecast, error, errsize);
+  return MSERV_SUCCESS;
+}
+
+/* stop output stream */
+
+int icecast_output_stop(t_channel *c, void *private, char *error, int errsize)
+{
+  t_icecast *icecast = (t_icecast *)private;
+
+  if (icecast->connected && !icecast->persist)
+    return icecast_internal_disconnect(c, icecast, error, errsize);
   return MSERV_SUCCESS;
 }
