@@ -10,6 +10,9 @@ via CVS the version of the first entry is the forthcoming version number.
 - Add "exec" command to config to allow arbitrary command execution on startup
 - Remove defaults for each module type and instead use "exec" feature to add
   output streams to default channel
+- Added module entry points for start/stop of channel
+- Icecast module can now (optionally) disconnect from server when channel is
+  stopped
 
 0.40 - Nov 1st 2003
 -------------------
